--- a/css/style.css
+++ b/css/style.css
@@ -14,29 +14,8 @@
 }
 
 body {
-	/*
-	height: 1000px;
-	// we actually do not give height to the body element as
-	// this can grow any longer. In many cases we tend not to give
-	// height anyway unless it is really necessary to have proper alignment with other div/element
-	*/
 	width: 1024px;
-	/*
-	// As you have given the width 1024 make sure all the left and right content needs to add up to
-		this value
-		eg: .contentLeft {width: 324px;} .contentRight {width: 700px;}
-	// Question: What if there is padding in one of the block like so:
-	 	eg: .contentLeft {width: 324px; padding-left: 20px;} .contentRight {width: 700px;}
-		Here the total width becomes: 324 + 20 + 700 = 1044px (so this may cause the problem)
-		Tips: to avoid that use css property: box-sizing: border-box; which add the padding without
-		changing block size.
-		Or when we give width just make sure not to give padding. ;)
-	*/
 	margin: 0px auto;
-	/*
-	// tips: we can also do margin: 0 auto
-	// we can just use number '0' when the value is 0/zero
-	*/
 	border: 1px solid black;
 	border-radius: 25px;
 }
@@ -57,71 +36,53 @@ h1 {
 
 #logo {
 	margin: 0px, 0px, 20px, 20px;
-	border: 1px solid black;
 	width: 200px;
 	padding: 0px 0px 5px 40px;
 }
 
-#logo:hover img {
+#logo img:hover {
 	transform: rotate(180deg);
 	transition-duration: 1s;
 }
 /* Header: End */
 
 .banner {
-
 }
 
-.wrapper1 {
-	/*
-	// clear: both;
-	// I am changing this into new class name which we will call .clear{}
-	*/
+.image-content-top {
 	border-top: 1px solid black;
-	/*margin: 0px 0px 0px 0px;*/
-	margin: 0; /* I dont see the use of this line */
-	/*
-	// This is basically means: 0px(top) 0px(right) 0px(bottom) 0px(left)
-	// Tips: so we can write: margin: 0; When no other value is present then it repeats given
-		value in above order
-	*/
 	padding-top: 40px;
 	padding-bottom: 10px;
 }
 
-.wrapper1 .contentLeft {
+.image-content-top .content-left {
 	float: left;
-	width: 30%;
+	width: 20%;
 }
 
-.wrapper .contentRight {
+.image-content-top .content-right {
 	float: right;
-	width: 70%;
+	width: 65%;
+	margin-right: 20px;
 }
 
 
 
 nav {
 	width: 100%;
-	/*float: left;*/
-	/* this is now moved to contentLeft*/
-	padding: 0px 0px 0px 20px;
-	box-sizing: border-box; /* Try removing this line and you will see nav overlapping */
-	/* We need box-sizing here because we have width and padding defined here.*/
+	padding: 0px 20px;
+	box-sizing: border-box; 
+	margin: 0px 0px 20px 30px;
 }
 
 nav ul {
 	background: blue;
-	/* as it is just a colour we can use: background-color: blue*/
-	padding: 5px;
-	height: 120px; /* I would not give height to UL */
-
+	padding: 5px 30px;
 }
 
 nav ul li {
 	list-style-type: none;
 	background: lightblue;
-	/*width: 80px;*/
 	margin: 10px auto;
 	text-align: center;
 }
@@ -137,40 +98,66 @@ nav ul li a:hover {
 	color: red;
 }
 
-.wrapper1 .textContent {
-	border: 1px solid black;
-	margin-bottom: 30px;
-}
-
 h3 {
 	text-align: center;
 	text-decoration: underline;
+	padding: 5px 0px;
 }
 
-/* PLEASE REPEAT THE ABOVE CODE FOR WRAPPER2 */
-
-/*
-// You have got .contentleft defined above already.
-// styling a class in two different places is not a good practise.
-// or may do like: .wrapper1 .contentLeft {} and .wrapper2 .contentRight {}
-*/
-.wrapper2 .contentleft {
-	width: 750px;
-	border: 1px solid black;
-	margin-bottom: 40px;
+.image-content-top .text-content {
+	margin-bottom: 30px;
 }
 
-.image {
-	margin: 20px;
-	width: 220px;
+.image-content-top .text-content p {
+	padding: 8px 0px;
+}
+
+#button-js-games {
+		text-align: center;
+}
+
+#button-js-games li {
+	display: inline-block;
+	padding-left: 10px;
+}
+
+
+
+/* Bottom half of site */
+
+
+.image-content-bottom {
+	border-top: 1px solid black;
+	padding-top: 40px;
+	padding-bottom: 10px;
+}
+
+.image-content-bottom .content-left {
+	float: left;
+	width: 65%;
+	padding: 10px 20px;
+}
+
+.image-content-bottom .content-right {
 	float: right;
+	margin: 20px;
+	width: 20%;
 }
 
 footer {
 	clear: both;
-	border: 1px solid black;
-	padding: 5px 0px 0px;
+	border-top: 1px solid black;
+	padding: 15px 0px;
+}
 
+footer h2 {
+	text-align: center;
+	text-decoration: underline;
+	padding-bottom: 15px;
+}
+
+footer h3 {
+	text-decoration: none;
 }
 
 .skills ul {
@@ -182,12 +169,83 @@ footer {
 	margin: 0px 35px;
 }
 
-.skills ul li h2:before {
-	content: "\b7";
+.skills ul li h3:before {
+	content: "•";
 	size: 3px;
 }
 
 #copyright {
 	font-style: italic;
-	margin-left: 5px;
+	margin: 5px 0px 5px 15px;
+	position: absolute;
+
+}
+
+/* jspage.html styling below */
+
+#gameSection {
+	border-top: 1px solid black;
+	min-height: 300px;
+	display: none;
+}
+
+#gameOfNumbers {
+	display: none;
+}
+
+#gameOfNumbers h2 {
+	text-align: center;
+}
+
+#instructions {
+	font-style: italic;
+	font-weight: bold;
+	margin-top: 5px;
+	padding-left: 10px;
+	width: 200px;
+}
+
+.no-text-dec {
+	text-decoration: none;
+}
+
+.instructions-text {
+	display: none;
+	text-align: center;
+	margin: 15px;
+}
+
+.choice {
+	text-align: center;
+	margin: 10px;
+}
+
+.choice input {
+	margin-left: 15px;
+	margin-right: 5px;
+}
+
+#ownNumbers ul {
+	margin-right: 20px;
+	border: 1px solid black;
+	width: 40%;
+}
+
+#ownNumbers ul li {
+	margin: 10px 30% 5px 10%;
+	list-style-type: none;
+	text-align: right;
+}
+
+input[type=number] {
+	width: 50px;
+	padding: 5px;
+	margin-left: 15px;
+	margin-right: 10%;
+}
+
+.incorrect-number {
+	font-size: small;
+	color: red;
+	display: none;
 }
